# nyay-sathi-clean

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/: agent.py  auth.py  browser.py  config.py  logger.py  main.py  rag_engine.py  rate_limiter.py  requirements.txt  sanitizer.py  tools.py  web_search.py
cli/: config.py  nyay_cli.py  ui.py
data/processed/: faiss.index  faiss_meta.pkl
scripts/: README.md  build_faiss_index.py  chunk_sections.py  clean_sections.py  config.py  download_acts.py  fetch_full_sections.py  normalize_sections.py  parse_indiacode_html.py  query_and_explain.py  query_faiss.py  requirements.txt  utils.py
